[package]
name = "deadpool-ldap"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.5"
ldap3 = "0.7"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.40"
